.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glbankcardtxn__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glbankcardtxn</customHelpPage>
    <description>glbankcardtxn__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <description>Formula External Id</description>
        <label>Formula External Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>RIGHT(TEXT(rstkf__glbankcardtxn_txndate__c)&amp; &quot;(&quot; &amp; rstkf__glbankcardtxn_desc__c &amp; &quot;)&quot;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_bankcardtt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction Template</description>
        <inlineHelpText>When a bank card transaction has been created using a template, this field is populated with a lookup to the Bank Card Template used.</inlineHelpText>
        <label>Transaction Template</label>
        <referenceTo>rstkf__bankcardtt__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_chargecode__c</fullName>
        <description>Charge Code</description>
        <inlineHelpText>Charge Code</inlineHelpText>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_desc__c</fullName>
        <description>Transaction Description</description>
        <inlineHelpText>User-defined description for this Bank Card transaction.This is a user-defined text field limited to 100 characters</inlineHelpText>
        <label>Transaction Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_dim1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 1 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 1.</inlineHelpText>
        <label>Dimension 1 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_dim2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 2 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 2.</inlineHelpText>
        <label>Dimension 2 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transactions (Dimension 2 Value)</relationshipLabel>
        <relationshipName>Bank_Card_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_dim3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 3 Value</description>
        <inlineHelpText>Where dimensions are used, this field is a lookup to the dimension values for Dimension 3.</inlineHelpText>
        <label>Dimension 3 Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Bank Card Transactions (Dimension 3 Value)</relationshipLabel>
        <relationshipName>Bank_Card_Transactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Expense Account</description>
        <inlineHelpText>This is a lookup to the expense account against which this transaction will be recorded.</inlineHelpText>
        <label>Expense Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_glbankacct__c</fullName>
        <description>Bank Account</description>
        <inlineHelpText>The Bank Card Account that this transaction relates to.</inlineHelpText>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>glbankcardtxns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_glbanktxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank Account Transaction</description>
        <inlineHelpText>When a bank card transaction has been posted, this field is populated with a lookup to the Bank transaction created.</inlineHelpText>
        <label>Bank Account Transaction</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <inlineHelpText>The Division that will be impacted by this transaction. This is a lookup to the division master.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project</description>
        <inlineHelpText>The Division that will be impacted by this transaction. This is a lookup to the project master.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Bank Card Transactions</relationshipLabel>
        <relationshipName>Bank_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_misccredit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field designates the Bank Card Transaction as a Miscellaneous Credit, created (only) as part of the reconciliation process.</inlineHelpText>
        <label>Miscellaneous Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_odcid__c</fullName>
        <description>ODC Code</description>
        <inlineHelpText>The Other Direct Cost code (if any) associated with the AP invoice.</inlineHelpText>
        <label>ODC Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_payee__c</fullName>
        <description>Payee</description>
        <inlineHelpText>The name of the Payee that this transaction applies to. This is a user-defined text field limited to 50 characters.</inlineHelpText>
        <label>Payee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_postdate__c</fullName>
        <description>Posting Date</description>
        <inlineHelpText>The date on which the transaction was posted</inlineHelpText>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transaction Posted to Bank Account</description>
        <inlineHelpText>Indicates whether the transaction has been posted. When a transaction has been posted, this field is automatically checked.</inlineHelpText>
        <label>Transaction Posted to Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_txnamount__c</fullName>
        <description>Transaction Amount</description>
        <inlineHelpText>The total amount of this transaction in Home Currency.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_txndate__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>The date on which the transaction was performed / the expense was incurred.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_txngroup__c</fullName>
        <description>Transaction Group</description>
        <inlineHelpText>The date and time that the first transaction in this group of transactions. This date &amp; time serves as the identifier of the whole group.</inlineHelpText>
        <label>Transaction Group</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankcardtxn_txnseq__c</fullName>
        <description>Transaction Sequence</description>
        <inlineHelpText>The sequence in which this record falls within the Transaction Group.</inlineHelpText>
        <label>Transaction Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Bank Card Transaction</label>
    <nameField>
        <label>Bank Card Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Card Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>